--- a/public/js/index.html
+++ b/public/js/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="utf-8">
   <title>Meuapp</title>
+  <meta name="csrf-token" content="{{ csrf_token() }}">
+
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
